# OCTRON-GUI

./: CHANGELOG.md  pyproject.toml
octron/: main.py
octron/sam_octron/configs/sam2.1/: sam2.1_hiera_b+.yaml  sam2.1_hiera_l.yaml  sam2.1_hiera_s.yaml  sam2.1_hiera_t.yaml  sam2.1_hq_hiera_l.yaml
octron/sam_octron/helpers/: sam2_layer.py  sam2_layer_callback.py  sam2_octron.py  sam2hq_octron.py  sam3_octron.py
octron/yolo_octron/: constants.py  yolo_octron.py
octron/yolo_octron/gui/: region_props_dialog.py  yolo_handler.py
octron/yolo_octron/helpers/: polygons.py
