[build-system]
requires = [
  "setuptools>=62.3.0,<75.8.1",
  "wheel",
  "setuptools_scm[toml]>=6.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "octron"
dynamic = ["version"]
description = "OCTRON - segmentation and tracking for animal behavior quantification"

authors = [
    { name = "Horst A. Obenhaus", email = "hobenhaus@gmail.com" }
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
keywords = ["octron", "video segmentation", "napari", "object tracking", "behavior quantification", "machine learning", "sam2", "yolo11"]
classifiers = [
    "Framework :: napari",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
]

requires-python = ">=3.11,<3.12"
dependencies = [
    "napari==0.7.0a3",
    "numpy<=2.1.1",
    "qtpy>=2.4.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "scipy>=1.15.1",
    "pandas>=2.2.3",
    "scikit-image>=0.25.0",
    "zarr>=3.1.2",
    "kornia>=0.8.0",
    "cmasher>=1.9.2",
    "imantics",
    "ultralytics>=8.4.19",
    "setuptools",
    "tensorboard>=2.19.0",
    "lap>=0.5.12",
    "opencv-python>=4.11.0",       
    "natsort>=8.4.0",   
    "huggingface_hub>=1.5.0",
    "transformers>=5.2.0",
    "napari-pyav @ https://github.com/horsto/napari-pyav/releases/download/v0.0.10.1/napari_pyav-0.0.10-py3-none-any.whl",
    "sam-2 @ https://github.com/horsto/sam2/releases/download/v0.0.2/sam_2-1.0-py3-none-any.whl",
    "boxmot @ https://github.com/horsto/boxmot/releases/download/v.15.0.5.2/boxmot-15.0.5-py3-none-any.whl",
    "timm>=1.0.25",
    "clip @ git+https://github.com/ultralytics/CLIP.git"
]

[project.optional-dependencies]
pyqt5 = ["PyQt5>=5.15.11"]
pyqt6 = ["PyQt6>=6.10.0"]
all = ["napari[pyqt6]==0.7.0a3"]

[project.urls]
Homepage = "https://github.com/OCTRON-tracking/OCTRON-GUI"
Repository = "https://github.com/OCTRON-tracking/OCTRON-GUI.git"
Issues = "https://github.com/OCTRON-tracking/OCTRON-GUI/issues"
Changelog = "https://github.com/OCTRON-tracking/OCTRON-GUI/blob/master/CHANGELOG.md"

[project.entry-points."napari.manifest"]
octron = "octron:napari.yaml"

[project.entry-points."pipx.run"]
octron = "octron.main:octron_gui"

[project.scripts]
octron = "octron:napari.yaml"
octron-gui = "octron.main:octron_gui"
octron-gif = "octron.tools.mp4_to_gif:main"
octron-test-gpu = "octron.test_gpu:check_gpu_access"

[tool.setuptools.packages.find]
where = ["."]
include = ["octron*", "qt_gui"]
exclude = ["pics", "sample_data"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.svg", "*.md"]

[tool.setuptools_scm]
# write version into code for import
write_to = "octron/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"